# zerebro

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 8830587ef153_initial_schema.py
backend/src/zerebro/: __init__.py  config.py
backend/src/zerebro/api/: __init__.py  app.py  builder_routes.py  mcp_routes.py
backend/src/zerebro/core/: __init__.py  builder.py  mcp_manager.py  memory.py  runner.py  tracing.py
backend/src/zerebro/db/: __init__.py  engine.py  models.py  repositories.py
backend/src/zerebro/models/: __init__.py  agent.py  conversation.py  mcp.py
backend/tests/: __init__.py  test_api.py  test_builder.py  test_mcp.py  test_models.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/agents/: page.tsx
frontend/src/app/(dashboard)/agents/[id]/: page.tsx
frontend/src/app/(dashboard)/mcp/: page.tsx
frontend/src/app/(twin)/: layout.tsx
frontend/src/app/(twin)/builder/: page.tsx
frontend/src/components/: agent-card.tsx  agent-config-preview.tsx  agent-run-panel.tsx  sidebar-nav.tsx
frontend/src/lib/: api.ts  types.ts
