[project]
name = "zerebro"
version = "0.1.0"
description = "Self-hosted agent builder platform - create, deploy, and manage AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
    # Agent framework
    "deepagents>=0.4.11,<1.0.0",

    # LLM providers (v1.x compatible with langchain-core>=1.2)
    "langchain-openai>=1.0.0,<2.0.0",
    "langchain-groq>=1.0.0,<2.0.0",

    # MCP support (for future sprints)
    "langchain-mcp-adapters>=0.2.0,<1.0.0",

    # API
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
    "sse-starlette>=2.0.0,<3.0.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "alembic>=1.14.0,<2.0.0",

    # LangGraph persistent memory (checkpointer + store backed by Postgres).
    # Uses psycopg3 (sync driver), not asyncpg.
    "langgraph-checkpoint-postgres>=3.0.0,<4.0.0",
    "psycopg[binary]>=3.0.0,<4.0.0",

    # Observability
    "arize-phoenix-otel>=0.8.0,<1.0.0",
    "opentelemetry-api>=1.0.0",
    "opentelemetry-sdk>=1.0.0",
    "openinference-instrumentation-langchain>=0.1.0",

    # Data validation
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",

    # Utilities
    "python-dotenv>=1.0.0,<2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "pyright>=1.1.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
extraPaths = ["src"]
# Third-party packages installed in Docker but not resolvable in CI/build env.
# These imports are verified correct via pip install -e "." in the project venv.
reportMissingImports = "warning"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
